# GBM

./: CMakeLists.txt  README.md  main.cpp
data/: exon.csv  exon1.csv  tesla.csv
include/: CSVReader.h  GBM.h  ParameterCalculation.h  StockData.h
src/: CSVReader.cpp  GBMRunner.cpp  ParameterCalculation.cpp
